[tool.poetry]
name = "kachel"
version = "0.1.0"
description = "Veloviewer Tile Server"
authors = ["Robin Hutmacher <robin.hutmacher@gmail.com>"]
packages = [
    { include = "kachel" },
]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
Pillow = "^9.4.0"
requests = "^2.28.2"
gunicorn = "^20.1.0"
mercantile = "^1.2.1"

[tool.poetry.dev-dependencies]
ruff = "^0.0.243"
black = "^23.1.0"
mypy = "^1.0.0"
ipython = "^8.9.0"
pre-commit = "^3.0.4"
mkdocs = "^1.4.2"
mkdocstrings = {version = "^0.20.0", extras = ["python"]}
mkdocs-material = "^9.0.13"

[tool.ruff]
select = ["E", "F", "I001", "B"]

ignore = ["E501", "D107", "D203", "D212", "D213", "D402", "D413", "D415", "D416", "D417"]

line-length = 88

# Assume Python 3.10.
target-version = "py310"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
